# spacefm-old

./: .clang-format  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  Makefile.in  mount.rules
data/ui/: prefdlg.ui  prefdlg2.ui  prefdlg3.ui
doc/: spacefm-dialog.1  spacefm-scripts.1  spacefm-socket.1
etc/: Makefile.in  spacefm.conf
src/: Makefile.am  Makefile.in  cust-dialog.c  cust-dialog.h  extern.h  find-files.c  go-dialog.c  gtk2-compat.h  item-prop.c  main-window.c  main-window.h  main.c  pref-dialog.c  private.h  settings.c  settings.h  spacefm-auth  utils.c  utils.h  xml-purge.c
src/desktop/: desktop-window.c  desktop-window.h  desktop.c  desktop.h  working-area.c
src/exo/: README  exo-binding.c  exo-binding.h  exo-cell-renderer-ellipsized-text.c  exo-cell-renderer-ellipsized-text.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-common.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-gtk-extensions.c  exo-gtk-extensions.h  exo-icon-chooser-dialog.c  exo-icon-chooser-dialog.h  exo-icon-chooser-model.c  exo-icon-chooser-model.h  exo-icon-view.c  exo-icon-view.h  exo-marshal.c  exo-marshal.h  exo-private.c  exo-private.h  exo-string.c  exo-string.h  exo-thumbnail-preview.c  exo-thumbnail-preview.h  exo-tree-view.c  exo-tree-view.h  exo-utils.c  exo-utils.h
src/mime-type/: mime-action.c  mime-action.h  mime-cache.c  mime-cache.h  mime-type.c  mime-type.h
src/ptk/: ptk-app-chooser.c  ptk-app-chooser.h  ptk-clipboard.c  ptk-clipboard.h  ptk-console-output.c  ptk-console-output.h  ptk-dir-tree-view.c  ptk-dir-tree.c  ptk-dir-tree.h  ptk-file-archiver.c  ptk-file-archiver.h  ptk-file-browser.c  ptk-file-browser.h  ptk-file-icon-renderer.c  ptk-file-icon-renderer.h  ptk-file-list.c  ptk-file-list.h  ptk-file-menu.c  ptk-file-menu.h  ptk-file-misc.c  ptk-file-misc.h  ptk-file-properties.c  ptk-file-properties.h  ptk-file-task.c  ptk-file-task.h  ptk-handler.c  ptk-handler.h  ptk-input-dialog.c  ptk-input-dialog.h  ptk-location-view.c  ptk-location-view.h  ptk-path-entry.c  ptk-path-entry.h  ptk-text-renderer.c  ptk-text-renderer.h  ptk-utils.c  ptk-utils.h
src/vfs/: vfs-app-desktop.c  vfs-app-desktop.h  vfs-async-task.c  vfs-async-task.h  vfs-dir.c  vfs-dir.h  vfs-execute.c  vfs-execute.h  vfs-file-info.c  vfs-file-info.h  vfs-file-monitor.c  vfs-file-monitor.h  vfs-file-task.c  vfs-file-task.h  vfs-mime-type.c  vfs-mime-type.h  vfs-thumbnail-loader.c  vfs-thumbnail-loader.h  vfs-utils.c  vfs-utils.h  vfs-volume-hal.c  vfs-volume-nohal.c  vfs-volume-udev.c  vfs-volume.c  vfs-volume.h
